ansible/roles/manage-k3s-homelab-cluster/files/virtual-management/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: virtual-management
  labels:
    name: virtual-management
